--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -11,6 +11,7 @@
   "author": "Jorge Matos",
   "license": "ISC",
   "dependencies": {
+    "@clerk/express": "^1.7.39",
     "cors": "^2.8.5",
     "express": "^5.0.3"
   },
