--- a/apps/order-service/package.json
+++ b/apps/order-service/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@clerk/fastify": "^2.4.39",
     "@repo/typescript-config": "workspace:*",
-    "fastify": "^5.6.1"
+    "fastify": "^5.6.1",
+    "@repo/order-db": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20",
