--- a/apps/order-service/package.json
+++ b/apps/order-service/package.json
@@ -13,11 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@clerk/fastify": "^2.4.39",
-    "@repo/typescript-config": "workspace:*",
     "fastify": "^5.6.1",
     "@repo/order-db": "workspace:*"
   },
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
+    "@repo/types": "workspace:*",
     "@types/node": "^20",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
