--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@repo/types": "workspace:*",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@repo/product-db": "workspace:*"
