--- a/apps/payment-service/package.json
+++ b/apps/payment-service/package.json
@@ -8,13 +8,14 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@hono/node-server": "^1.19.5",
     "@hono/clerk-auth": "^3.0.3",
-    "hono": "^4.9.12"
+    "@hono/node-server": "^1.19.5",
+    "hono": "^4.9.12",
+    "stripe": "^19.1.0"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
     "@repo/types": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
