--- a/apps/order-service/package.json
+++ b/apps/order-service/package.json
@@ -13,12 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@clerk/fastify": "^2.4.39",
-    "fastify": "^5.6.1",
-    "@repo/order-db": "workspace:*"
+    "@repo/order-db": "workspace:*",
+    "date-fns": "^4.1.0",
+    "fastify": "^5.6.1"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
     "@repo/types": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^20",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
