feat(kafka): integrate Kafka messaging across services, add producer and consumer utilities, and update service configurations for order and payment processing

--- a/apps/order-service/package.json
+++ b/apps/order-service/package.json
@@ -15,7 +15,8 @@
     "@clerk/fastify": "^2.4.39",
     "@repo/order-db": "workspace:*",
     "date-fns": "^4.1.0",
-    "fastify": "^5.6.1"
+    "fastify": "^5.6.1",
+    "@repo/kafka": "workspace:*"
   },
   "devDependencies": {
     "@repo/types": "workspace:*",
